first stab at using grunt, wish me luck

--- a/click-party.html
+++ b/click-party.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Clicking Page</title>
+  <title>Click Party</title>
   
 <link rel="stylesheet" type="text/css" href="click-party-stylesheet.css">
 <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
