--- a/click-party.html
+++ b/click-party.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Click Party</title>
-  
+<meta name="viewport" content="width=device-width, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="click-party-stylesheet.css">
 <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 
