--- a/click-party.html
+++ b/click-party.html
@@ -2,7 +2,7 @@
 <head>
   <title>Click Party</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<link rel="stylesheet" type="text/css" href="click-party-stylesheet.css">
+<link rel="stylesheet" type="text/css" href="click-party-stylesheet.min.css">
 <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 
 
@@ -21,5 +21,5 @@
 
 
 </body>
-<script src="click-party.js"></script>
+<script src="production.min.js"></script>
 </html>
