centers display vertically

--- a/click-party.html
+++ b/click-party.html
@@ -15,10 +15,10 @@
 </head>
 <body>
 
-<div class="centered text invertMe target noHighlight">CLICK HERE TO PARTY</div>
-
-<div class="centered hexDisplay invertMe hexText"></div>
-
+<div class="container">
+	<div class="text invertMe target noHighlight">CLICK HERE TO PARTY</div>
+	<div class="hexDisplay invertMe hexText"></div>
+</div>
 
 </body>
 <script src="production.min.js"></script>
