refactors architecture, cleans up styles

--- a/click-party.html
+++ b/click-party.html
@@ -2,24 +2,15 @@
 <head>
   <title>Click Party</title>
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<link rel="stylesheet" type="text/css" href="click-party-stylesheet.min.css">
-<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-
-
-<!-- 
-//  TO DO:
-//  
-//  Link to jQuery AND an external JavaScript File
-// -->
-  
+<link rel="stylesheet" type="text/css" href="./production/click-party-stylesheet.min.css">  
 </head>
 <body>
 
 <div class="container">
-	<div class="text invertMe target noHighlight">CLICK HERE TO PARTY</div>
-	<div class="hexDisplay invertMe hexText"></div>
+	<div class="invertMe">CLICK HERE TO PARTY</div>
+	<div class="invertMe hexText"></div>
 </div>
 
 </body>
-<script src="production.min.js"></script>
+	<script src="./production/production.min.js"></script>
 </html>
