adds color history

--- a/click-party.html
+++ b/click-party.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<div class="container">
+<div id="history"></div>
+
+<div id="container">
 	<div class="invertMe">CLICK HERE TO PARTY</div>
 	<div class="invertMe hexText"></div>
 </div>
